tests/error/pointer_to_tuple_decomposition.bz
function main()
{
	let *[e] = (*[int32])();
}
